Fix link to TBN Studio Details page

--- a/WEB TBN/Homepage.html
+++ b/WEB TBN/Homepage.html
@@ -209,7 +209,7 @@
 
     <!-- Navbar với logo là <a> mở tab mới, thêm link Đăng tải game -->
     <nav class="navbar">
-        <a class="logo" href="TBN Studio Details.html" target="_blank">
+        <a class="logo" href="TBN_Studio_Details.html" target="_blank">
             <i class="fa-solid fa-gamepad"></i> TBN STUDIO
         </a>
         
