Update logo link in navbar to new studio details

--- a/Homepage.html
+++ b/Homepage.html
@@ -209,7 +209,7 @@
 
     <!-- Navbar với logo là <a> mở tab mới, thêm link Đăng tải game -->
     <nav class="navbar">
-        <a class="logo" href="about.html" target="_blank">
+        <a class="logo" href="WEB%20TBN/TBN%20Studio%20Details.html" target="_blank">
             <i class="fa-solid fa-gamepad"></i> TBN STUDIO
         </a>
         
